[gd_scene load_steps=18 format=3]

[ext_resource type="Script" path="res://scenes/sticker_placer.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://scenes/stickers/drums.tscn" id="4_drums"]
[ext_resource type="PackedScene" path="res://scenes/stickers/bongo.tscn" id="5_bongo"]
[ext_resource type="PackedScene" path="res://scenes/stickers/contrabas.tscn" id="6_contrabas"]
[ext_resource type="PackedScene" path="res://scenes/stickers/gitaar.tscn" id="7_gitaar"]
[ext_resource type="PackedScene" path="res://scenes/stickers/orgelpijp.tscn" id="8_orgelpijp"]
[ext_resource type="PackedScene" path="res://scenes/stickers/viool.tscn" id="9_viool"]
[ext_resource type="PackedScene" path="res://scenes/stickers/xylofoon.tscn" id="10_xylofoon"]
[ext_resource type="PackedScene" path="res://scenes/stickers/bellen.tscn" id="11_bellen"]
[ext_resource type="PackedScene" path="res://scenes/stickers/trompet.tscn" id="16_trompet"]
[ext_resource type="PackedScene" path="res://scenes/stickers/speelkam.tscn" id="17_speelkam"]
[ext_resource type="PackedScene" path="res://scenes/sticker_picker.tscn" id="12_picker"]
[ext_resource type="PackedScene" path="res://scenes/trash_button.tscn" id="13_trash"]
[ext_resource type="PackedScene" path="res://scenes/add_button.tscn" id="14_add"]
[ext_resource type="Script" path="res://scenes/sticker_slider.gd" id="15_slider"]

[sub_resource type="Gradient" id="Gradient_picker"]
colors = PackedColorArray(0.38534746, 0.38356277, 0.7964018, 1, 0.99607843, 0.94509804, 0.05490196, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_picker"]
gradient = SubResource("Gradient_picker")
fill_from = Vector2(0.9293478, 0.9836956)
fill_to = Vector2(0, 0)

[node name="StickerPlacer" type="Node2D"]
script = ExtResource("1_script")
trash_zone_radius = 100.0

[node name="Stickers" type="Node2D" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 10

[node name="TrashButton" parent="UILayer" instance=ExtResource("13_trash")]
z_index = 50
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 60.0
offset_right = -60.0
offset_bottom = 180.0
grow_horizontal = 0

[node name="AddButton" parent="UILayer" instance=ExtResource("14_add")]
z_index = 50
custom_minimum_size = Vector2(120, 120)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 60.0
offset_right = -60.0
offset_bottom = 180.0
grow_horizontal = 0

[node name="StickerPicker" parent="UILayer" instance=ExtResource("12_picker")]
sticker_scenes = Array[PackedScene]([ExtResource("4_drums"), ExtResource("5_bongo"), ExtResource("6_contrabas"), ExtResource("7_gitaar"), ExtResource("8_orgelpijp"), ExtResource("9_viool"), ExtResource("10_xylofoon"), ExtResource("11_bellen"), ExtResource("16_trompet"), ExtResource("17_speelkam")])
panel_gradient = SubResource("GradientTexture2D_picker")

[node name="StickerSliders" type="VBoxContainer" parent="UILayer"]
visible = false
z_index = 50
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -168.0
offset_top = 255.0
offset_right = -68.0
offset_bottom = 995.0
grow_horizontal = 0
mouse_filter = 2
theme_override_constants/separation = 20

[node name="RotateSlider" type="Control" parent="UILayer/StickerSliders"]
custom_minimum_size = Vector2(60, 360)
layout_mode = 2
script = ExtResource("15_slider")
min_value = -180.0
max_value = 180.0
value = 0.0
track_length = 300.0
track_color = Color(1, 1, 1, 1)
icon_line_width = 5.0
icon_scale = 0.388
icon_arrow_size = 15.0

[node name="ScaleSlider" type="Control" parent="UILayer/StickerSliders"]
custom_minimum_size = Vector2(60, 360)
layout_mode = 2
script = ExtResource("15_slider")
icon_type = 1
min_value = 0.3
max_value = 2.0
value = 1.0
track_length = 300.0
track_color = Color(1, 1, 1, 1)
icon_line_width = 5.0
icon_scale = 0.501
icon_arrow_size = 15.0
